lox-tests/tests/super/super_at_top_level.stderr
ERROR: Cannot use `super` outside of a class
 --> 1:1
  |
1 | super.foo("bar"); // Error at 'super': Can't use 'super' outside of a class.
  | ^-------^
